set(
    SOURCES_LIBFT
		Finished/libft/ft_calloc.c
		../../Finished/libft/ft_isascii.c
		../../Finished/libft/ft_itoa.c
		../../Finished/libft/ft_lstclear.c
		../../Finished/libft/ft_lstlast_bonus.c
		../../Finished/libft/ft_memccpy.c
		../../Finished/libft/ft_memcpy.c
		../../Finished/libft/ft_putchar_fd.c
		../../Finished/libft/ft_putstr_fd.c
		../../Finished/libft/ft_strdup.c
		../../Finished/libft/ft_strlcpy.c
		../../Finished/libft/ft_strncmp.c
		../../Finished/libft/ft_strtrim.c
		../../Finished/libft/ft_toupper.c
		../../Finished/libft/ft_atoi.c
		../../Finished/libft/ft_isalnum.c
		../../Finished/libft/ft_isdigit.c
		../../Finished/libft/ft_lstadd_back_bonus.c
		../../Finished/libft/ft_lstdelone.c
		../../Finished/libft/ft_lstnew_bonus.c
		../../Finished/libft/ft_memchr.c
		../../Finished/libft/ft_memmove.c
		../../Finished/libft/ft_putendl_fd.c
		../../Finished/libft/ft_split.c
		../../Finished/libft/ft_strjoin.c
		../../Finished/libft/ft_strlen.c
		../../Finished/libft/ft_strnstr.c
		../../Finished/libft/ft_substr.c
		../../Finished/libft/libft.h
		../../Finished/libft/ft_bzero.c
		../../Finished/libft/ft_isalpha.c
		../../Finished/libft/ft_isprint.c
		../../Finished/libft/ft_lstadd_front_bonus.c
		../../Finished/libft/ft_lstiter_bonus.c
		../../Finished/libft/ft_lstsize_bonus.c
		../../Finished/libft/ft_memcmp.c
		../../Finished/libft/ft_memset.c
		../../Finished/libft/ft_putnbr_fd.c
		../../Finished/libft/ft_strchr.c
		../../Finished/libft/ft_strlcat.c
		../../Finished/libft/ft_strmapi.c
		../../Finished/libft/ft_strrchr.c
		../../Finished/libft/ft_tolower.c
    PARENT_SCOPE)

add_executable(libft ${SOURCES_LIBFT} ../../main.c)
