add_executable(ft_containers
        main.cpp
        vector.hpp
        stack.hpp

        utils/algorithm.hpp
        utils/stddef.hpp
        utils/exceptions.hpp
        utils/type_traits.hpp

        iterators/iterator_traits.hpp
        iterators/iterator.hpp
        iterators/normal_iterators.hpp
        iterators/reverse_iterator.hpp
        iterators/vector_iterator.hpp
        map.hpp utils/functional.hpp utils/utility.hpp)