add_executable(ft_containers
        main.cpp
        vector.hpp
        stack.hpp
        map.hpp

        libs/algorithm.hpp
        libs/stddef.hpp
        libs/exceptions.hpp
        libs/type_traits.hpp
        libs/functional.hpp
        libs/utility.hpp

        iterators/iterator_traits.hpp
        iterators/iterator.hpp
        iterators/normal_iterators.hpp
        iterators/reverse_iterator.hpp
        utils/vector_iterator.hpp

        utils/map_iterator.hpp
        utils/Node.hpp utils/Tree.hpp)